--- a/.gitignore
+++ b/.gitignore
@@ -18370,3 +18370,20 @@ Candy crush/Temp/FSTimeGet-cd333bbcef4257a48838fb2dd370235f
 Candy crush/Temp/FSTimeGet-f5216e6a414d4924d95c8e03e9177ae8
 Candy crush/Temp/UnityLockfile
 Candy crush/Temp/workerlic
+Candy crush/Temp/FSTimeGet-d9398528fcb8c0b419c746f678f323fb
+Candy crush/Temp/FSTimeGet-b20d69bf9bc0f834facc7ba80756bc44
+Candy crush/Temp/FSTimeGet-4979748793650094d81ae7bababf5e80
+Candy crush/Logs/AssetImportWorker1-prev.log
+Candy crush/Logs/AssetImportWorker0-prev.log
+Candy crush/Library/LastSceneManagerSetup.txt
+Candy crush/Library/expandedItems
+Candy crush/Library/BurstCache/JIT/CacheManifest.json
+Candy crush/Library/Artifacts/b0/b075306b9567ab82c9d0b4bd9e94ccb4
+Candy crush/Library/Artifacts/a4/a44f0f5a036ad3356a519edd50f4fbde
+Candy crush/Library/Artifacts/a1/a1b92198eb894093d2d9ef6deeea787c
+Candy crush/Library/Artifacts/6f/6f15344aff6ecdb9a3ddffcff20b15d7
+Candy crush/Library/Artifacts/54/54e34a163bbaac3421fcefb378057b35
+Candy crush/Library/Artifacts/47/472b884e79b268086519657afc9eb7f7
+Candy crush/Library/Artifacts/23/231fd13247f79fe9a52d3ef81ee1eacb
+Candy crush/Library/Artifacts/15/155791266b5c159be29389e35ccaa861
+Candy crush/Library/AnnotationManager
