--- a/.gitignore
+++ b/.gitignore
@@ -18387,3 +18387,29 @@ Candy crush/Library/Artifacts/47/472b884e79b268086519657afc9eb7f7
 Candy crush/Library/Artifacts/23/231fd13247f79fe9a52d3ef81ee1eacb
 Candy crush/Library/Artifacts/15/155791266b5c159be29389e35ccaa861
 Candy crush/Library/AnnotationManager
+Candy crush/Temp/FSTimeGet-eedd63890e3d06d45ae5eee449ccc532
+Candy crush/Temp/FSTimeGet-b9daccba116d7fd409ff6aca5f27810d
+Candy crush/Temp/FSTimeGet-2cf4d29f4e68a9e48b6b371245866cd4
+Candy crush/Library/Artifacts/f8/f8d7ed2f21fe225bc99f2b27e5b30eed
+Candy crush/Library/Artifacts/f8/f87fe9704f58eefc59c2beb568611be9
+Candy crush/Library/Artifacts/ea/eafdbba328d22a04693449fa8dd843d1
+Candy crush/Library/Artifacts/db/dbb38a717010808ed336161a131b211b
+Candy crush/Library/Artifacts/d8/d895087118309e9b1bc398aeb916ed9a
+Candy crush/Library/Artifacts/ce/ced13ee3de6b898ab501e4490b857da2
+Candy crush/Library/Artifacts/c8/c8c50c79e16f9446893dc32fd7e37f3a
+Candy crush/Library/Artifacts/c3/c3cf8bfe9c92df3e1a9064f667d336a1
+Candy crush/Library/Artifacts/c2/c26b612ad8df13a683a1093c08b5bfef
+Candy crush/Library/Artifacts/b0/b0287764e6300ddc73278ffe3d72d922
+Candy crush/Library/Artifacts/ad/aded996d13f004fb66fb390bab333d75
+Candy crush/Library/Artifacts/a1/a17d4250466c91a7ed87023f2c3aa493
+Candy crush/Library/Artifacts/81/81fbb402c2d552cbe58b9362bd627c73
+Candy crush/Library/Artifacts/73/73b3052d87e54896659419a2b65a0206
+Candy crush/Library/Artifacts/6f/6fcee48d27cdfb96437f98f4c3246d01
+Candy crush/Library/Artifacts/6e/6e4d905cb2275cdd416c029f9814c72e
+Candy crush/Library/Artifacts/6a/6aa4787834a41adc74c6bc0401217784
+Candy crush/Library/Artifacts/3c/3c127bfed6d3b7ee43698b9185b26a6a
+Candy crush/Library/Artifacts/3a/3a3a076d75b59f88f7e3fd699f0c068a
+Candy crush/Library/Artifacts/37/37bb8323fe5dafca651659c509c498cb
+Candy crush/Library/Artifacts/36/36ed6ea34395f93e4f7ad002c4b352ee
+Candy crush/Library/Artifacts/07/07077fa78a2c4ccd1f420090a0dc81ca
+Candy crush/Library/Artifacts/00/00d716cb288a2560dfd6f27d524103e9
