--- a/.gitignore
+++ b/.gitignore
@@ -18413,3 +18413,11 @@ Candy crush/Library/Artifacts/37/37bb8323fe5dafca651659c509c498cb
 Candy crush/Library/Artifacts/36/36ed6ea34395f93e4f7ad002c4b352ee
 Candy crush/Library/Artifacts/07/07077fa78a2c4ccd1f420090a0dc81ca
 Candy crush/Library/Artifacts/00/00d716cb288a2560dfd6f27d524103e9
+Candy crush/Library/Artifacts/0d/0da6edbd9e88e0b243760da8be71ad2e
+Candy crush/Library/Artifacts/5a/5a527e5ed476e69667f9aa7a3d5613f6
+Candy crush/Library/Artifacts/98/98fec82f931631be80c1d3f58d3c3b38
+Candy crush/Library/Artifacts/d4/d49e59e3a850be9f4c80dcbd63c61c4f
+Candy crush/Library/Artifacts/df/df00d590189d2fd469b94ee9f057a520
+Candy crush/Temp/FSTimeGet-92b572194659ead43af69baa338874fe
+Candy crush/Temp/FSTimeGet-a5b83936476f5d24fb9b41124f29aa7b
+Candy crush/Temp/FSTimeGet-e75462f4805294a4bb0846c0bf7938cc
