--- a/.gitignore
+++ b/.gitignore
@@ -18421,3 +18421,16 @@ Candy crush/Library/Artifacts/df/df00d590189d2fd469b94ee9f057a520
 Candy crush/Temp/FSTimeGet-92b572194659ead43af69baa338874fe
 Candy crush/Temp/FSTimeGet-a5b83936476f5d24fb9b41124f29aa7b
 Candy crush/Temp/FSTimeGet-e75462f4805294a4bb0846c0bf7938cc
+Candy crush/Library/Artifacts/18/187f310c5787b6da6ad58c90693ff877
+Candy crush/Library/Artifacts/2a/2aa53659fb3493c93c4619ce1f9d52ab
+Candy crush/Library/Artifacts/32/3230c742e7f272658cb7a02e6b89ff30
+Candy crush/Library/Artifacts/3e/3e3f96e066772d23ade456aa6ba411fc
+Candy crush/Library/Artifacts/41/41ac141b04d2453683dd32b4baba8e17
+Candy crush/Library/Artifacts/47/47f7684d889ca46a0a8e82e0b8168d6f
+Candy crush/Library/Artifacts/55/552b8cdc6fc855d6ef6ec3624f18d5f8
+Candy crush/Library/Artifacts/81/814faea1e018c506c0ee747d2fd27e70
+Candy crush/Library/Artifacts/8c/8cdfd78fee59c3abaedd643a9f67ce67
+Candy crush/Library/Artifacts/e0/e02cba4220a3793db3c5b84e50755b27
+Candy crush/Temp/FSTimeGet-2a2d1212a76e969488b09fc257c807f0
+Candy crush/Temp/FSTimeGet-de1d7571906a85e4394391595105b078
+Candy crush/Temp/FSTimeGet-f6a69c4b97d53dd4690e012a110bab76
